CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/Sales_Connect__mdt.object-meta.xml
<CustomObject>
    <description>Credential data for connect external provider</description>
    <label>Sales Connect</label>
    <pluralLabel>Sales Connects</pluralLabel>
</CustomObject>