CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/fields/Callback_url__c.field-meta.xml
<CustomField>
    <fullName>Callback_url__c</fullName>
    <label>Callback url</label>
    <type>Url</type>
</CustomField>