CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/fields/Codigo_App__c.field-meta.xml
<CustomField>
    <fullName>Codigo_App__c</fullName>
    <label>Codigo App</label>
    <length>50</length>
    <type>Text</type>
</CustomField>