CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/fields/Codigo_Canal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Canal__c</fullName>
    <label>Código Canal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>