CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/fields/Empresa_App__c.field-meta.xml
<CustomField>
    <fullName>Empresa_App__c</fullName>
    <label>Empresa App</label>
    <length>50</length>
    <type>Text</type>
</CustomField>