CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/fields/Modalidad__c.field-meta.xml
<CustomField>
    <fullName>Modalidad__c</fullName>
    <label>Modalidad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>