CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>