CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/fields/URL_sales__c.field-meta.xml
<CustomField>
    <fullName>URL_sales__c</fullName>
    <label>URL_sales</label>
    <type>Url</type>
</CustomField>