CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/fields/user_pool_id__c.field-meta.xml
<CustomField>
    <fullName>user_pool_id__c</fullName>
    <label>User pool id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>