CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>