CNSDEVCOLECT/force-app/main/default/objects/Sales_Connect__mdt/fields/x_api_key__c.field-meta.xml
<CustomField>
    <fullName>x_api_key__c</fullName>
    <label>X api key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>